--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
-    "name":"wdev/vagas",
+    "name":"kelvin/tec",
     "autoload":{
       "psr-4":{
         "App\\":"app/"
       }
+    },
+    "require": {
+        "league/csv": "8.0"
     }
-  }
+}
